package support.model.enums;

public enum Priority {
    BAJA, MEDIA, ALTA, CRITICA
}
