package support.model.enums;

public enum Severity {
    S1, S2, S3, S4
}
