package support.model.enums;

public enum State {
    NEW, IN_PROGRESS, BLOCKED, RESOLVED
}
